--- a/.github/ISSUE_TEMPLATE/3-internal-decision.yml
+++ b/.github/ISSUE_TEMPLATE/3-internal-decision.yml
@@ -53,8 +53,8 @@ body:
       description: Leave the following acceptance criteria unchecked when the ticket is created then mark them as completed as you meet each criterion with the ADR
       options:
         - label: The approvers for this decision have been identified (ideally before work on the ADR starts)
+        - label: The ADR has been added to the list of ADRs in `website/src/content/docs/decisions/adr/` with a number prefix like `0002-decision-summary.md`
         - label: The ADR has been reviewed and approved by the approvers listed above
         - label: The ADR satisfies requirements that are outlined in the ADR template
-        - label: Any follow-up tickets have been created (if necessary)
     validations:
       required: false
