[Issue #20] Improve tooling for `specs/` (#42)
* feat: Adds script to prepare upstream dependencies
* feat: Adds script to render API docs
* ci: Adds eslint and prettier to `specs/`
* ci: Adds eslint and prettier to `examples/custom-api/`
* ci: Adds and updates CI checks across codebases
* build: Bump spec alpha version

--- a/examples/custom-api/package.json
+++ b/examples/custom-api/package.json
@@ -3,11 +3,24 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "typespec": "tsp compile src/main.tsp"
+    "prepare:deps": "cd ../../specs && npm install && npm run build && npm pack && cd ../examples/custom-api",
+    "typespec": "tsp compile src/main.tsp",
+    "lint": "eslint . --fix",
+    "format": "prettier --write . && tsp format lib",
+    "check:lint": "eslint",
+    "check:format": "prettier --check . && tsp format lib --check",
+    "docs:build": "npx @redocly/cli build-docs tsp-output/@typespec/openapi3/openapi.yaml --output ./dist/redocly.html",
+    "docs:preview": "open ./dist/redocly.html",
+    "docs": "npm run typespec && npm run docs:build && npm run docs:preview"
   },
   "peerDependencies": {
-    "@typespec/compiler": "^0.63.0",
-    "@opportunity-stream/core": "file:../../specs/opportunity-stream-core-0.1.0-alpha.1.tgz"
+    "@opportunity-stream/core": "file:../../specs/opportunity-stream-core-0.1.0-alpha.2.tgz",
+    "@typespec/compiler": "^0.63.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "eslint": "^9.18.0",
+    "prettier": "^3.4.2",
+    "typescript-eslint": "^8.20.0"
+  }
 }
