--- a/website/package.json
+++ b/website/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^15.14.0",
     "prettier": "3.4.2",
+    "starlight-links-validator": "^0.14.1",
     "typescript-eslint": "^8.18.2"
   }
 }
