[Issue #31] Update repo with working title (#47)
* refactor: Updates TypeSpec library to use CommonGrants
* refactor: Updates custom API example to use CommonGrants
* docs: Updates and expands READMEs

--- a/examples/custom-api/package.json
+++ b/examples/custom-api/package.json
@@ -14,7 +14,7 @@
     "docs": "npm run typespec && npm run docs:build && npm run docs:preview"
   },
   "peerDependencies": {
-    "@opportunity-stream/core": "file:../../specs/opportunity-stream-core-0.1.0-alpha.2.tgz",
+    "@common-grants/core": "file:../../specs/common-grants-core-0.1.0-alpha.3.tgz",
     "@typespec/compiler": "^0.63.0"
   },
   "private": true,
