--- a/specs/package.json
+++ b/specs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@opportunity-stream/core",
-  "version": "0.1.0-alpha.2",
+  "name": "@common-grants/core",
+  "version": "0.1.0-alpha.3",
   "description": "TypeSpec library for defining grant opportunity data models and APIs",
   "type": "module",
   "main": "dist/src/index.js",
