--- a/examples/custom-api/tspconfig.yaml
+++ b/examples/custom-api/tspconfig.yaml
@@ -1,3 +1,6 @@
 emit:
-  - "@typespec/json-schema"
   - "@typespec/openapi3"
+options:
+  "@typespec/openapi3":
+    "emitter-output-dir": "{project-root}/api"
+    "output-file": "{output-dir}/openapi.yaml"
