--- a/specs/tspconfig.yaml
+++ b/specs/tspconfig.yaml
@@ -1,7 +1,11 @@
 emit:
   - "@typespec/openapi3"
   - "@typespec/json-schema"
+  - "typespec-go"
 options:
   "@typespec/openapi3":
-    "output-file": "openapi.yaml"
+    "output-file": "{project-root}/scripts/generated/openapi.yaml"
     "omit-unreachable-types": false
+    "emitter-output-dir": "{project-root}/scripts/generated"
+  "typespec-go":
+    "emitter-output-dir": "{project-root}/api"
